# antialias_resize_cuda

./: CMakeLists.txt  README.md  main.cpp  my_resize.cu  my_resize.h  tmp.py
